--- a/src/views/products/productsEdit.ejs
+++ b/src/views/products/productsEdit.ejs
@@ -30,7 +30,7 @@
     </nav>
 </div>
 
-    <form class="Formulario" action="/products/edit/<%= productToEdit.id %>?_method=PATCH" method="POST">
+    <form class="Formulario" action="/products/edit/<%= Product.product_id %>?_method=PATCH" method="POST">
 
 
         <div class="formato">
