Solucion validaciones y cookies

--- a/src/views/users/users.ejs
+++ b/src/views/users/users.ejs
@@ -77,7 +77,7 @@
                       Email: <%= allUsers.email %> 
                   </li>
                   <li>
-                      Tipo de usuario: <%=allUsers.Ucategory_id %>
+                      Tipo de usuario: <%=allUsers.Ucategory_name %>
                   </li>
                 </ul>
               </article>
