--- a/src/views/products/productsEdit.ejs
+++ b/src/views/products/productsEdit.ejs
@@ -37,18 +37,18 @@
         
             <div >
                 <label for="titulo" class="lnombre">Nombre del producto:</label>
-                <input type="text" id="titulo" name="titulo" required class="nombre">
+                <input type="text" id="titulo" name="titulo" value="" required class="nombre">
             </div>
             <div class="">
                 <label for="precio" class="lprecio">Precio del producto:</label>
-                <input type="number" id="precio" name="precio" required class="precio">
+                <input type="number" id="precio" name="precio" value="" required class="precio">
             </div>
   
     </div>
 
     <div>
         <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
-        <input type="text" id="descripcionCorta" name="descripcionCorta" required class="descripcion">
+        <input type="text" id="descripcionCorta" name="descripcionCorta" value="" required class="descripcion">
     </div>
 
 
