--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -44,7 +44,7 @@
             <img class="imagenes" src="/images/Users/<%= userLocal.image %>"  alt=""></img>
         </div>
             <div class="detalle">
-                <p class="id" >N° Usuario: <%= userLocal.id %></p>
+                <p class="id" >N° Usuario: <%= userLocal.user_id %></p>
                 <br>
                 <p class="nombre" >Nombre:<%= userLocal.first_name + " " + userLocal.last_name  %></p>
                 <br>
