--- a/src/views/users/userDetail.ejs
+++ b/src/views/users/userDetail.ejs
@@ -60,7 +60,7 @@
                     <p><%= users.email  %></p>
                 <br>
                 <p class="tipo_usuario">Tipo de usuario:</p>
-                    
+                <p><%= users.user_categories.Ucategory_name %></p>
                  
                 <br>
                   
