--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,107 +1,130 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <%- include('../partials/head') %>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/productDetail.css">
+        <link rel="stylesheet" href="/stylesheets/styles.css">
+        <link rel="stylesheet" href="/stylesheets/productDetail.css">
 
 
 
-    <title>Playground-Jugueteria</title>
+        <title>Playground-Jugueteria</title>
 </head>
+
 <body>
     <!--Cabecera del sitio-->
 
     <%- include('../partials/header') %>
 
-    <!--Logo, buscador y carrito de compras-->
-    <main class="container-main">
-        
+        <!--Logo, buscador y carrito de compras-->
+        <main class="container-main">
+
             <a href="/">
-                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="/images/Logo/Logo.png" alt="Logo Playground Jugueteria"></img>
             </a>
-     
-        <div class="buscar-wrapper">
-            <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
-            <button type="button" class="fas fa-search" id="lupa"></button>
-        </div>
-        <div class="container-carrito">
-            <div class="carro">
-                <a href="/products/detail/1">
-                    <i class="fas fa-shopping-cart" id="icono-carrito">
-                        <div class="box-carrito"></div>
-                    </i>
-                </a>
+
+            <div class="buscar-wrapper">
+                <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
+                <button type="button" class="fas fa-search" id="lupa"></button>
             </div>
-        </div>
-    </main>
-    <!--Menú-->
-    <nav class="main-navbar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#marcas">Marcas</a></li>
-            <li><a href="/products">Productos</a></li>
-            <li><a href="/users">Usuarios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="/users/profile">Perfil</a></li>
-        </ul>
-    </nav>
-    <!--Detalle de Producto seccion-->
-    <div class="container-detalle">
-        <div class="imagen">
-            <img class="imagenes" src="/images/Products/<%= products.image %>"  alt=""></img>
-        </div>
+            <div class="container-carrito">
+                <div class="carro">
+                    <a href="/products/detail/1">
+                        <i class="fas fa-shopping-cart" id="icono-carrito">
+                            <div class="box-carrito"></div>
+                        </i>
+                    </a>
+                </div>
+            </div>
+        </main>
+        <!--Menú-->
+        <nav class="main-navbar">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#marcas">Marcas</a></li>
+                <li><a href="/products">Productos</a></li>
+                <li><a href="/users">Usuarios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="/users/profile">Perfil</a></li>
+            </ul>
+        </nav>
+        <!--Detalle de Producto seccion-->
+        <div class="container-detalle">
+            <div class="imagen">
+                <img class="imagenes" src="/images/Products/<%= products.image %>" alt=""></img>
+            </div>
             <div class="detalle">
-                <h2><%= products.title %></h2>
+                <h2>
+                    <%= products.title %>
+                </h2>
                 <br>
-                <p>N° Producto:<%= products.product_id %></p>
+                <p>N° Producto:<%= products.product_id %>
+                </p>
                 <br>
                 <p class="descripcion">Descripción:</p>
-                    <p><%= products.description %></p>
+                <p>
+                    <%= products.description %>
+                </p>
                 <br>
                 <p class="precio">Precio:</p>
-                    
-                    <p>$<%= products.price %></p>
-                
-                  
-                    <form action="/products/delete/<%= products.product_id %>?_method=DELETE" method="POST" >
-                        <input class="editar" onclick="location.href='/products/edit/<%= products.product_id %>'" type="button" value="Editar" >
-                        <button type="submit" class="eliminar">Eliminar</button>
-                    </form>
-            
-                    </div>
-             </div>
-        
-    <div class="info-destacados">
-        <h3>
-            PRODUCTOS DESTACADOS
-        </h3>
-    </div>
-    <!--Productos Destacados-->
-    <section class="destacados">
-        <div class="destacados-box1">
-            <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
-            <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
-            <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
-            <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
-            <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
-            <a href="/productDetail">
-                <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
-            </a>
-            
-        </div>
-        <div class="destacados-box2">
-            
-        </div>
-    </section>
-    <!--Nuestras Marcas-->
-    <section id="marcas">
-       
-    
 
-    </section>
-      <!--Footer-->
-      <%- include('../partials/footer') %>
-      
+                <p>$<%= products.price %>
+                </p>
+                <br>
+                <p class="precio">Marca:</p>
+
+                <p>
+                    <%= products.trademarks.trademark_name %>
+                </p>
+                <br>
+                <p class="precio">Categoria:</p>
+
+                <p>
+                    <%= products.categories.Pcategory_name %>
+                </p>
+                 <br>
+
+
+                <form action="/products/delete/<%= products.product_id %>?_method=DELETE" method="POST">
+                    <input class="editar" onclick="location.href='/products/edit/<%= products.product_id %>'"
+                        type="button" value="Editar">
+                    <button type="submit" class="eliminar">Eliminar</button>
+                </form>
+
+            </div>
+        </div>
+
+        <div class="info-destacados">
+            <h3>
+                PRODUCTOS DESTACADOS
+            </h3>
+        </div>
+        <!--Productos Destacados-->
+        <section class="destacados">
+            <div class="destacados-box1">
+                <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
+                <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
+                <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
+                <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
+                <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
+                <a href="/productDetail">
+                    <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
+                </a>
+
+            </div>
+            <div class="destacados-box2">
+
+            </div>
+        </section>
+        <!--Nuestras Marcas-->
+        <section id="marcas">
+
+
+
+        </section>
+        <!--Footer-->
+        <%- include('../partials/footer') %>
+
 </body>
+
 </html>
