--- a/src/views/products/productsEdit.ejs
+++ b/src/views/products/productsEdit.ejs
@@ -37,21 +37,53 @@
         
             <div >
                 <label for="titulo" class="lnombre">Nombre del producto:</label>
-                <input type="text" id="titulo" name="titulo" value="" required class="nombre">
+                <input type="text" id="titulo" name="titulo" value="<%= Product.title %>" required class="nombre">
             </div>
             <div class="">
                 <label for="precio" class="lprecio">Precio del producto:</label>
-                <input type="number" id="precio" name="precio" value="" required class="precio">
+                <input type="number" id="precio" name="precio" value="<%= Product.price  %>" required class="precio">
             </div>
   
     </div>
 
     <div>
         <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
-        <input type="text" id="descripcionCorta" name="descripcionCorta" value="" required class="descripcion">
+        <input type="text" id="descripcionCorta" name="descripcionCorta" value="<%= Product.description %>" required class="descripcion">
     </div>
 
+    <div class="formato">
+        <div>
+            <label for="" class="lnombre">Marca</label>
+            <select name="marca" id="marca">
+             
+             <% for (let i=0; i < trademarks.length; i++) {%>
+            
+                <option value="<%= trademarks[i].trademark_id %>">
+                   <%= trademarks[i].trademark_name %>
+                </option>
+    
+            <% }%>
+    
+            </select>
+        </div>
 
+        <div>
+            <label for="" class="lnombre">Categoria</label>
+            <select name="category" id="category">
+             
+             <% for (let i=0; i < categories.length; i++) {%>
+            
+                <option value="<%= categories[i].Pcategory_id %>">
+                   <%= categories[i].Pcategory_name %>
+                </option>
+    
+            <% }%>
+    
+            </select>
+        </div>
+    
+
+    </div>
 
     <input class="btnenviar" type="submit" value="GUARDAR">
     
