--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -80,8 +80,8 @@
 
 
                             <div class="linea">
-                                <a href="#">¿No tienes cuenta?</a>
-                                <a class="crea" href="#">Crea una cuenta</a>
+                                <a href="">¿No tienes cuenta?</a>
+                                <a class="crea" href="/users/register">Crea una cuenta</a>
                             </div>
                 </div>
 
