--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -32,25 +32,25 @@
         </nav>
         </div>
 
-        <form class="Formulario" action="/products" method="POST">
+        <form class="Formulario" action="/products" method="POST" enctype="multipart/form-data">
 
 
             <div class="formato">
 
                 <div>
                     <label for="titulo" class="lnombre">Nombre del producto:</label>
-                    <input type="text" id="titulo" name="titulo" required class="nombre">
+                    <input type="text" id="titulo" name="titulo" class="nombre">
                 </div>
                 <div class="">
                     <label for="precio" class="lprecio">Precio del producto:</label>
-                    <input type="number" id="precio" name="precio" required class="precio">
+                    <input type="number" id="precio" name="precio" class="precio">
                 </div>
 
             </div>
 
             <div>
                 <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
-                <input type="text" id="descripcionCorta" name="descripcionCorta" required class="descripcion">
+                <input type="text" id="descripcionCorta" name="descripcionCorta" class="descripcion">
             </div>
 
 
@@ -89,6 +89,8 @@
 
             </div>
 
+            <label for="imagenProducto" class="lnombre">Imagen de Producto</label>
+            <input type="file" name="imagenProducto" id="imagenProducto">
 
             <input class="btnenviar" type="submit" value="GUARDAR">
 
